--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@ p{ line-height:1.65; color:#d7def0; margin:0; }
   display:grid;
   grid-template-columns:1fr 1fr;
   gap:22px;
+  margin-bottom:26px;
 }
 .callout{
   border:1px solid var(--line);
