text-decoration property to ghost pill on hover - remove underline

--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@ p{ line-height:1.65; color:#d7def0; margin:0; }
 .pill.ghost:hover{
   border-color: rgba(255,61,189,.55);
   box-shadow: var(--glowPink);
+  text-decoration: none;
 }
 .pill:focus-visible{
   outline:none;
