Add text-decoration none on primary pill hover
for BOP pill with gradient outline stroke

--- a/index.html
+++ b/index.html
@@ -241,7 +241,9 @@ p{ line-height:1.65; color:#d7def0; margin:0; }
     linear-gradient(var(--bg),var(--bg)) padding-box,
     linear-gradient(90deg, var(--purple), var(--pink), var(--yellow)) border-box;
 }
-.pill.primary:hover{ box-shadow: var(--glowPurple), var(--glowPink), var(--glowYellow); }
+.pill.primary:hover{ box-shadow: var(--glowPurple), var(--glowPink), var(--glowYellow); 
+text-decoration: none;                   
+}
 .pill.ghost{
   border:1px solid var(--line);
   background:rgba(255,255,255,.02);
